# tremplinthomas

./: .cursorrules  .env.example  .gitignore  .npmrc  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json
crawler/: .env.example  README.md  pyproject.toml
crawler/config/: keywords.yaml  sources.yaml  sources_discovered.yaml
crawler/db/: migration.sql  migration_002_venues_extended.sql  migration_003_tremplins_polymorphic.sql  migration_004_tremplin_quality.sql  migration_005_show_all_statuses.sql  migration_006_slug_canon.sql
crawler/input/: Accompagnement-conseil-Agence-Culturelle-Nouvelle-Aquitaine-04-2026.ods  Autre-Agence-Culturelle-Nouvelle-Aquitaine-04-2026.ods  Editeur-label-Agence-Culturelle-Nouvelle-Aquitaine-04-2026.ods  Equipe-artistique-Agence-Culturelle-Nouvelle-Aquitaine-04-2026.ods  Festival-Agence-Culturelle-Nouvelle-Aquitaine-04-2026.ods  Formation-initiale-Agence-Culturelle-Nouvelle-Aquitaine-04-2026.ods  Lieu-de-diffusion-Agence-Culturelle-Nouvelle-Aquitaine-04-2026.ods  Lieu-de-travail-artistique-Agence-Culturelle-Nouvelle-Aquitaine-04-2026.ods  Organisateur-regulier-sans-lieu-Agence-Culturelle-Nouvelle-Aquitaine-04-2026.ods  Producteur-tourneur-Agence-Culturelle-Nouvelle-Aquitaine-04-2026.ods  Reseau-agence-Agence-Culturelle-Nouvelle-Aquitaine-04-2026.ods  Service-culturel-public-Agence-Culturelle-Nouvelle-Aquitaine-04-2026.ods  page-2026-05-19-12-05-24.md
crawler/scripts/: ingest_acna.py  openagenda_scan.py  parse_wiki_na.py  reclassify_url.py  seed_sources.py  seed_venues.py
scripts/: setup.sh
(+30 files in other folders)
