[project]
name = "tremplins-na"
version = "0.1.0"
description = "Veille tremplins musicaux Nouvelle-Aquitaine"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "trafilatura>=1.12",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
